# bench_collectives

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_hpx.sh  compile_mpi.sh  hpx_benchmark.cpp  hpx_tests.sbatch  hpx_tests.sh  install_hpx.sh  mpi_benchmark.cpp  mpi_tests.sbatch  run.sh
.github/workflows/: ci.yml
mpi/: CMakeLists.txt  mpi_benchmark.cpp
